<resources>
    <string name="app_name">HiltDemo</string>
    <string name="title_home">首页</string>
    <string name="title_sort">分类</string>
    <string name="title_find">发现</string>
    <string name="title_cart">购物车</string>
    <string name="title_mine">我的</string>

    <string name="net_error">网络不给力，请稍后重试</string>


    <string name="title_draw_color">drawColor()</string>
    <string name="title_draw_circle">drawCircle()</string>
    <string name="title_draw_rect">drawRect()</string>
    <string name="title_draw_point">drawPoint()</string>
    <string name="title_draw_oval">drawOval()</string>
    <string name="title_draw_line">drawLine()</string>
    <string name="title_draw_round_rect">drawRoundRect()</string>
    <string name="title_draw_arc">drawArc()</string>
    <string name="title_draw_path">drawPath()</string>
    <string name="title_draw_histogram">直方图</string>
    <string name="title_draw_pie_chart">饼图</string>
</resources>
