<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:contentDescription="@string/title_home"
        android:icon="@drawable/selector_main_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_sort"
        android:contentDescription="@string/title_sort"
        android:icon="@drawable/selector_main_sort"
        android:title="@string/title_sort" />
    <item
        android:id="@+id/navigation_find"
        android:contentDescription="@string/title_find"
        android:icon="@drawable/selector_main_find"
        android:title="@string/title_find" />
    <item
        android:id="@+id/navigation_cart"
        android:contentDescription="@string/title_cart"
        android:icon="@drawable/selector_main_cart"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_mine"
        android:contentDescription="@string/title_mine"
        android:icon="@drawable/selector_main_mine"
        android:title="@string/title_mine" />
</menu>
